--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "cra-template-redux": "2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "tw-elements": "^1.1.0"
   },
