--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tw-elements": "^1.1.0"
   },
   "scripts": {
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1",
+    "tailwindcss-no-scrollbar": "^1.0.1",
     "web-vitals": "^3.5.2"
   }
 }
